--- a/oyunlar.html
+++ b/oyunlar.html
@@ -75,7 +75,7 @@ em {
   font-style: italic; }
 
 p {
-  margin-top: 1rem;
+  margin-top: ;
   margin-bottom: 1rem;
   color: #e0e0e0;
   max-width: 40rem; }
@@ -771,212 +771,73 @@ main {
 <a href="https://1234arab.github.io/tmtubegoo/base.apk" class="button"><span>Apk ýüklemek</span></a>
 
   <main>
-
     <section>
       <p class="_mthalf subtitle">
-EURO U19</p>
+    07.06.2023ý</p>    
+        
+Norway Lig 1</p>
 
-1)⏰21:00 Portugal u19 ━ Italy u19</p>
+1)⏰22:00 HamKam ━ Aalesund</p>
 
-(1)2.30       (X)3.10       (2)2.50</p>
+(1)1.80       (X)3.40       (2)3.40</p>
 
-(1x)1.30    (1/2)1.20    (2x)1.40</p>
+(1x)1.20    (1/2)1.20    (2x)1.70</p>
 
-Bolse        -          Mense</p>
+Bolse         -         Mense</p>
 
-1.5/1.20    -    1.5/3.00</p>
+1.5/1.15  -      1.5/3.40</p>
 
-2.5/1.80   -     2.5/1.70</p>
+2.5/1.70       - 2.5/1.80</p>
 
-3.5/3.20  +      3.5/1.20</p>
+3.5/2.90    -    3.5/1.20</p>
 
-2komanda gool</p>
+2komanda gool?</p>
 
 atar/1.60   atmaz /1.90</p>
 
 Oýunda gool sany?</p>
 
 Täk/1.80 Jübüt/1.80</p>
+
 ________________________________________________</p>
+Euro u19</p>
 
-2)⏰00:15 Malta u19 ━ Poland u19</p>
+2)⏰21:00 Grecce u19 ━ Spain u19</p>
 
-(1)25.00       (X)10.00       (2)1.05</p>
+(1)6.70       (X)4.50       (2)1.30</p>
 
-(1x)5.50    (1/2)1.01    (2x)-</p>
+(1x)2.30    (1/2)1.10    (2x)1.05</p>
 
-Bolse       -           Mense</p>
+Bolse            -      Mense</p>
 
-2.5/1.20     -   1.5/6.50</p>
+1.5/1.10      -  1.5/4.00</p>
 
-3.5/1.70    -    2.5/2.80</p>
+2.5/1.50    -    2.5/2.00</p>
 
-4.5/2.50     -   3.5/1.70</p>
+3.5/2.50    -    3.5/1.30</p>
 
 2komanda gool?</p>
 
-atar/2.20   atmaz /1.40</p>
-
-Oýunda gool sany?</p>
-
-Täk/1.80 Jübüt/1.80</p>
-
-________________________________________________</p>
-
-Argentina Lig 1</p>
-
-3)⏰22:00 Arsenal Sarandi ━ Defensa Justicia</p>
-
-(1)3.50       (X)3.10       (2)1.80</p>
-
-(1x)1.60    (1/2)1.20    (2x)1.20</p>
-
-Bolse         -         Mense</p>
-
-1.5/1.30     -   1.5/2.60</p>
-
-2.5/2.10     -   2.5/1.50</p>
-
-3.5/3.80   -     3.5/1.10</p>
-
-2komanda gool?</p>
-
-atar/1.85   atmaz /1.65</p>
+atar/1.80   atmaz /1.70</p>
 
 Oýunda gool sany?</p>
 
 Täk/1.80 Jübüt/1.80</p>
 ________________________________________________</p>
-4)⏰00:30 Union ━ Boco Juniors</p>
 
-(1)3.00       (X)2.80       (2)2.20</p>
+3)⏰00:00 Iceland u19 ━ Norway u19</p>
 
-(1x)1.40    (1/2)1.25    (2x)1.30</p>
+(1)3.80       (X)3.20       (2)1.70</p>
 
-Bolse                  Mense</p>
+(1x)1.70    (1/2)1.20    (2x)1.15</p>
 
-1.5/1.35        1.5/2.40</p>
+Bolse          -        Mense</p>
 
-2.5/2.30        2.5/1.40</p>
+1.5/1.20      -  1.5/3.00</p>
 
-3.5/4.50        3.5/1.10</p>
+2.5/1.80  -      2.5/1.70</p>
 
-2komanda gool?</p>
-
-atar/1.90   atmaz /1.60</p>
-
-Oýunda gool sany?</p>
-
-Täk/1.80 Jübüt/1.80</p>
-________________________________________________</p>
-5)⏰03:00 Argentinos ━ Instituto</p>
-
-(1)1.50       (X)3.35       (2)5.00</p>
-
-(1x)1.10    (1/2)1.20    (2x)2.00</p>
-
-Bolse                  Mense</p>
-
-1.5/1.30        1.5/2.70</p>
-
-2.5/2.10        2.5/1.50</p>
-
-3.5/3.80        3.5/1.10</p>
-
-2komanda gool?</p>
-
-atar/2.00   atmaz /1.50</p>
-
-Oýunda gool sany?</p>
-
-Täk/1.80 Jübüt/1.80</p>
-
-________________________________________________</p>
-6)⏰03:00 Sarmiento ━ Talleres</p>
-
-(1)3.50       (X)3.10       (2)1.80</p>
-
-(1x)1.60    (1/2)1.20    (2x)1.20</p>
-
-Bolse             -     Mense</p>
-
-1.5/1.30  -      1.5/2.60</p>
-
-2.5/2.10    -    2.5/1.50</p>
-
-3.5/3.90    -    3.5/1.10</p>
-
-2komanda gool?</p>
-
-atar/1.85   atmaz /1.65</p>
-
-Oýunda gool sany?</p>
-
-Täk/1.80 Jübüt/1.80</p>
-
-________________________________________________</p>
-
-7)⏰05:30 Belgrano ━ Barracas</p>
-
-(1)1.70       (X)3.10       (2)3.60</p>
-
-(1x)1.20    (1/2)1.20    (2x)1.60</p>
-
-Bolse                  Mense</p>
-
-1.5/1.30     -   1.5/2.60</p>
-
-2.5/2.10     -   2.5/1.50</p>
-
-3.5/3.90    -    3.5/1.10</p>
-
-2komanda gool?</p>
-
-atar/1.85   atmaz /1.65</p>
-
-Oýunda gool sany?</p>
-
-Täk/1.80 Jübüt/1.80</p>
-
-________________________________________________</p>
-
-8)⏰05:30 Huracan ━ Atletico Tacuman</p>
-
-(1)1.90       (X)3.00       (2)3.30</p>
-
-(1x)1.20    (1/2)1.25    (2x)1.60</p>
-
-Bolse                  Mense</p>
-
-1.5/1.30        1.5/2.50</p>
-
-2.5/2.20        2.5/1.50</p>
-
-3.5/4.00        3.5/1.10</p>
-
-2komanda gool?</p>
-
-atar/1.85   atmaz /1.65</p>
-
-Oýunda gool sany?</p>
-
-Täk/1.80 Jübüt/1.80</p>
-________________________________________________</p>
-Finland Lig 2</p>
-
-9)⏰20:30 TPS ━ KPV</p>
-
-(1)1.40       (X)4.00       (2)5.30</p>
-
-(1x)1.10    (1/2)1.15    (2x)2.10</p>
-
-Bolse           -       Mense</p>
-
-1.5/1.10      -  1.5/3.60</p>
-
-2.5/1.60     -   2.5/1.90</p>
-
-3.5/2.70   -     3.5/1.25</p>
+3.5/3.20  -      3.5/1.20</p>
 
 2komanda gool?</p>
 
@@ -986,21 +847,118 @@ Oýunda gool sany?</p>
 
 Täk/1.80 Jübüt/1.80</p>
 ________________________________________________</p>
-Iceland Lig 2</p>
 
-10)⏰23:30 Fjölnir ━ Leiknir</p>
+Belarus Lig 1</p>
 
-(1)1.40       (X)4.20       (2)4.80</p>
+4)⏰20:30 Naftan ━ Naman</p>
 
-(1x)1.10    (1/2)1.15    (2x)1.90</p>
+(1)5.20       (X)4.00       (2)1.40</p>
 
-Bolse         -         Mense</p>
+(1x)2.00    (1/2)1.15    (2x)1.10</p>
 
-2.5/1.30     -   1.5/5.00</p>
+Bolse           -       Mense</p>
 
-3.5/2.00     -   2.5/2.30</p>
+1.5/1.10  -      1.5/4.00</p>
 
-4.5/3.20   -     3.5/1.50</p>
+2.5/1.50     -   2.5/2.00</p>
+
+3.5/2.50    -    3.5/1.30</p>
+
+2komanda gool?</p>
+
+atar/1.60   atmaz /1.90</p>
+
+Oýunda gool sany?</p>
+
+Täk/1.80 Jübüt/1.80</p>
+________________________________________________</p>
+
+5)⏰22:30 Slavia Mozyr ━ Energetik</p>
+
+(1)1.80       (X)3.30       (2)3.20</p>
+
+(1x)1.20    (1/2)1.20    (2x)1.60</p>
+
+Bolse       -           Mense</p>
+
+1.5/1.15    -    1.5/3.40</p>
+
+2.5/1.70   -     2.5/1.80</p>
+
+3.5/2.90   -     3.5/1.20</p>
+
+2komanda gool?</p>
+
+atar/1.60   atmaz /1.90</p>
+
+Oýunda gool sany?</p>
+
+Täk/1.80 Jübüt/1.80</p>
+________________________________________________</p>
+
+Argentina Lig 1</p>
+
+6)⏰03:00 Gimnasia ━ Independiente</p>
+
+(1)2.20       (X)2.80       (2)2.60</p>
+
+(1x)1.30    (1/2)1.25    (2x)1.40</p>
+
+Bolse       -           Mense</p>
+
+1.5/1.35   -     1.5/2.50</p>
+
+2.5/2.30  -      2.5/1.45</p>
+
+3.5/4.50   -     3.5/1.10</p>
+
+2komanda gool?</p>
+
+atar/1.85   atmaz /1.65</p>
+
+Oýunda gool sany?</p>
+
+Täk/1.80 Jübüt/1.80</p>
+
+________________________________________________</p>
+7)⏰05:30 Central Cordoba ━ Old Boys</p>
+
+(1)2.30       (X)2.80       (2)2 50</p>
+
+(1x)1.30    (1/2)1.25    (2x)1.40</p>
+
+Bolse     -             Mense</p>
+
+1.5/1.35  -      1.5/2.40</p>
+
+2.5/2.40   -     2.5/1.40</p>
+
+3.5/4.90 -       3.5/1.10</p>
+
+2komanda gool?</p>
+
+atar/1.90   atmaz /1.60</p>
+
+Oýunda gool sany?</p>
+
+Täk/1.80 Jübüt/1.80</p>
+________________________________________________</p>
+
+Sweden Lig 2</p>
+
+8)⏰22:00 Landskrona ━ Jonkoping</p>
+
+(1)1.75       (X)3.40       (2)3.20</p>
+
+(1x)1.15    (1/2)1.20    (2x)1.70</p>
+
+Bolse            -      Mense</p>
+
+1.5/1.10  -      1.5/4.00</p>
+
+2.5/1.50    -    2.5/2.00</p>
+
+3.5/2.50   -     3.5/1.30</p>
 
 2komanda gool?</p>
 
@@ -1011,6 +969,77 @@ Oýunda gool sany?</p>
 Täk/1.80 Jübüt/1.80</p>
 
 ________________________________________________</p>
+9)⏰22:00 Orebro ━ Osters</p>
+
+(1)2.70       (X)3.20       (2)2.10</p>
+
+(1x)1.40    (1/2)1.20    (2x)1.30</p>
+
+Bolse      -            Mense</p>
+
+1.5/1.20   -     1.5/3.30</p>
+
+2.5/1.80   -     2.5/1.80</p>
+
+3.5/3.00   -     3.5/1.20</p>
+
+2komanda gool?</p>
+
+atar/1.660   atmaz /1.90</p>
+
+Oýunda gool sany?</p>
+
+Täk/1.80 Jübüt/1.80</p>
+________________________________________________</p>
+
+Ireland Lig 2</p>
+
+10)⏰23:45 Ramblers ━ Galway United</p>
+
+(1)8.50       (X)5.00       (2)1.20</p>
+
+(1x)3.00    (1/2)1.10    (2x)1.05</p>
+
+Bolse            -      Mense</p>
+
+1.5/1.10   -     1.5/4.70</p>
+
+2.5/1.40   -     2.5/2.30</p>
+
+3.5/2.20  -      3.5/1.45</p>
+
+2komanda gool?</p>
+
+atar/1.70   atmaz /1.80</p>
+
+Oýunda gool sany?</p>
+
+Täk/1.80 Jübüt/1.80</p>
+
+________________________________________________</p>
+11)⏰23:45 Kerry ━ Treaty United</p>
+
+(1)5.20       (X)3.90       (2)1.40</p>
+
+(1x)2.00    (1/2)1.15    (2x)1.10</p>
+
+Bolse            -      Mense</p>
+
+1.5/1.10   -     1.5/4.00</p>
+
+2.5/1.50   -     2.5/2.00</p>
+
+3.5/2.50   -     3.5/1.30</p>
+
+2komanda gool?</p>
+
+atar/1.70   atmaz /1.80</p>
+
+Oýunda gool sany?</p>
+
+Täk/1.80 Jübüt/1.80</p>
+________________________________________________</p>
+
 IMO 1: +79175108814</p>
 
 IMO 2: +380999647075</p>
