--- a/oyunlar.html
+++ b/oyunlar.html
@@ -750,7 +750,7 @@ main {
           <a class="nav-list__link" role="menuitem" href="https://1234arab.github.io/tmtubegoo/oyunlar.html">Oyunlar</a>
         </li>
         <li class="nav-list__item" role="none">
-          <a class="nav-list__link" role="menuitem" href="https://1234arab.github.io/tmtubegoo/futboltv.html">Futbol TV</a>
+          <a class="nav-list__link" role="menuitem" href="https://1234arab.github.io/tmtubegoo/futboltv1.html">Futbol TV</a>
         </li>
         <li class="nav-list__item" role="none">
           <a class="nav-list__link" role="menuitem" href="https://1234arab.github.io/tmtubegoo/kalkulyator.html">Kalkulyator</a>
