--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="https://trace-system.com/style.css">
+  <link rel="stylesheet" href="https://tomlider.ru/style.css">
 
   <!-- 
     - google font link
@@ -37,7 +37,7 @@
       <div class="overlay" data-overlay></div>
 
       <img src="https://freepngimg.com/thumb/logo/86892-league-playoffs-cup-national-capitals-washington-hockey-thumb.png" width="50"  alt="Filmlan logo">
-    <p class="hero-subtitle">TRACE-SYSTEM</p>
+    <p class="hero-subtitle">TOM LIDER</p>
 
       <div class="header-actions">
 
@@ -83,19 +83,19 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="https://trace-system.com/ssh.html" class="navbar-link">SSH-ACCOUNT</a>
+            <a href="https://tomlider.ru/ssh.html" class="navbar-link">SSH-ACCOUNT</a>
           </li>
 
           <li>
-            <a href="https://trace-system.com/cloudfront.html" class="navbar-link">CLOUDFRONT</a>
+            <a href="https://tomlider.ru/cloudfront.html" class="navbar-link">CLOUDFRONT</a>
           </li>
 
           <li>
-            <a href="https://trace-system.com/linux.html" class="navbar-link">LINUX-VPS</a>
+            <a href="https://tomlider.ru/linux.html" class="navbar-link">LINUX-VPS</a>
           </li>
 
           <li>
-            <a href="https://trace-system.com/script.html" class="navbar-link">SSH-SCRIPT</a>
+            <a href="https://tomlider.ru/script.html" class="navbar-link">SSH-SCRIPT</a>
           </li>
 
           <li>
@@ -415,7 +415,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="https://trace-system.com/script.js"></script>
+  <script src="https://tomlider.ru/script.js"></script>
 
   <!-- 
     - ionicon link
